--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@dcloudio/uni-mp-xhs": "3.0.0-4030620241128001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4030620241128001",
     "@dcloudio/uni-ui": "^1.5.8",
+    "pinia": "^3.0.3",
     "vue": "^3.4.21",
     "vue-i18n": "^9.1.9"
   },
@@ -60,8 +61,9 @@
     "@dcloudio/uni-cli-shared": "3.0.0-4030620241128001",
     "@dcloudio/uni-stacktracey": "3.0.0-4030620241128001",
     "@dcloudio/vite-plugin-uni": "3.0.0-4030620241128001",
-    "@vue/tsconfig": "^0.1.3",
     "@vue/runtime-core": "^3.4.21",
+    "@vue/tsconfig": "^0.1.3",
+    "pinia-plugin-unistorage": "^0.1.2",
     "sass": "^1.89.2",
     "sass-loader": "10.1.1",
     "typescript": "^4.9.4",
